[package]
name = "ca_extractor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Extracts CA certificates from eIDAS Trusted List"
license = "MIT"
repository = "https://github.com/your-username/caExtractor-rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
xml-rs = "0.8"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
